Implemented DB init